--- a/poolx/Cargo.toml
+++ b/poolx/Cargo.toml
@@ -2,8 +2,8 @@
 name = "poolx"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "A generic async connection pool with many features"
+license = "Apache-2.0"
 
 [dependencies]
 crossbeam = "0.8.4"
@@ -16,3 +16,4 @@ thiserror = "1.0.57"
 tokio = { version = "1.36.0", features = ["full"] }
 tracing = "0.1.40"
 url = "2.5.0"
+
